src/components/layouts/header/Header.styles.scss
.Header {
    background-color: white;
    font-family: 'Work Sans', sans-serif;    
    font-weight: bold;
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #26B9A7;
    align-items: center;
}

.logo-and-text  {
    display: flex;
    padding: 1rem 0;
}

.logo {
    background: transparent;
    width: 28px;    
    height: 19px;
    display: block;
    margin-left: 3rem;
   
}

.logo-name {
    color: #26B9A7;
    font-size: 1rem;
    margin-left: 0.5rem;
}

.header-search {
    width: 45vw;
    
}

.user-authenticate{
    display: flex;
    align-items: center;
    margin-right: 3rem;
}

.user-button {
    margin-left: 1rem;
    border: none;
    color: white;
}

@media (max-width: 700px) {
    .logo-name {
        display: none;
    }

    .header-search {
        display: none;
    }
}



// custom bootstrap button 

.btn-outline-primary {
    color: #26B9A7;
}

.btn-outline-primary:hover {
    background-color: #26B9A7 !important;
    border: 1px solid #26B9A7 !important;
}

